--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,3 +15,4 @@ tauri = { version = "2.0.0-beta", features = ['tray-icon'] }
 tauri-plugin-shell = "2.0.0-beta"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tauri-plugin-store = "2.0.0-beta"
