Updated app info

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "time-tracker-2"
-version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
+name = "trackmate"
+version = "0.0.1"
+description = "A simple time tracker app"
+authors = ["Sarunyhot Suvannachoti"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
