--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,3 +21,4 @@ tauri-plugin-shell = "2.0.0-beta"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-store = "2.0.0-beta"
+tauri-plugin-dialog = "2.0.0-beta.6"
